window location changed

--- a/index.html
+++ b/index.html
@@ -3545,7 +3545,7 @@ function validateEmail(email) {
                     }
                 },
 				error: function(XMLHttpRequest, textStatus, errorThrown){
-						window.location="file:///C:/Users/thiru/Downloads/eventer/eventer.html";
+						window.location="http://sudharsanrama.github.io/quest/index.html";
 					}
             });
 			
@@ -3717,7 +3717,7 @@ function validateEmail(email) {
 					
                 },
 				error: function(XMLHttpRequest, textStatus, errorThrown){
-						window.location="file:///C:/Users/thiru/Downloads/eventer/eventer.html";
+						window.location="http://sudharsanrama.github.io/quest/index.html";
 					}
             });
 			
