--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 		<!-- MAIN MENU -->
 	    <nav class="">
 	      <ul class="hd-list-menu">
-	        <li class="active"><a href=#main-carousel">Intro</a></li>
+	        <li class="active"><a href="#main-carousel">Intro</a></li>
 	        <li><a href="#section-event-infos">About </a></li>
 	        <li><a href="#section-schedule">Schedule</a></li>
 	                        
