--- a/index.html
+++ b/index.html
@@ -1017,7 +1017,7 @@
 							<!-- countDown -->
 							<div id="countdown" class="row"></div>
 							<!-- /countDown -->			
-							<p class="countdown-title2"> <a href="eventer.html#section-schedule" class="btn"><i class="fa fa-calendar"></i> &nbsp; see event schedule</a></p>
+							<p class="countdown-title2"> <a href="#section-schedule" class="btn"><i class="fa fa-calendar"></i> &nbsp; see event schedule</a></p>
 						</div>
 						<!-- /Main Title -->
 					</div>			
