--- a/index.html
+++ b/index.html
@@ -406,6 +406,9 @@
 								<option value="SN280,K.V.S English Medium school">K.V.S English Medium school</option>
 								<option value="SN281,K.V.S Matriculation Hr Sec school">K.V.S Matriculation Hr Sec school</option>
 								<option value="SN282,P.S Chidambaram Nadar Senior English School">P.S Chidambaram Nadar Senior English School</option>
+								<option value="SN283,Edustar International School">Edustar International School</option>
+								<option value="SN284,Ravilla K.R.A Vidhyashram">Ravilla K.R.A Vidhyashram</option>
+								<option value="SN285,Kamaraj Matriculation Hr Sec School">Kamaraj Matriculation Hr Sec School</option>
 								<option value="other">Other</option>
 						</select>
 					</div>
@@ -746,6 +749,9 @@
 								<option value="SN280,K.V.S English Medium school">K.V.S English Medium school</option>
 								<option value="SN281,K.V.S Matriculation Hr Sec school">K.V.S Matriculation Hr Sec school</option>
 								<option value="SN282,P.S Chidambaram Nadar Senior English School">P.S Chidambaram Nadar Senior English School</option>
+								<option value="SN283,Edustar International School">Edustar International School</option>
+								<option value="SN284,Ravilla K.R.A Vidhyashram">Ravilla K.R.A Vidhyashram</option>
+								<option value="SN285,Kamaraj Matriculation Hr Sec School">Kamaraj Matriculation Hr Sec School</option>
 								<option value="other">Other</option>
 						</select>
 					</div>
@@ -3875,7 +3881,7 @@ function validateEmail(email) {
                     }
                 },
 				error: function(XMLHttpRequest, textStatus, errorThrown){
-						window.location="http://sudharsanrama.github.io/quest/index.html";
+						window.location="quest.tce.edu";
 					}
             });
 			
@@ -4047,7 +4053,7 @@ function validateEmail(email) {
 					
                 },
 				error: function(XMLHttpRequest, textStatus, errorThrown){
-						window.location="http://sudharsanrama.github.io/quest/index.html";
+						window.location="quest.tce.edu";
 					}
             });
 			
